# magic-squares-5x5-rust

./: Cargo.toml  README.md
src/: enumerate.rs  main.rs
