[package]
name = "magic-squares-5x5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
fixedbitset = "0.4.2"
itertools = "0.10.5"
rayon = "1.5.3"

# Include debugging symbols in release mode
[profile.release]
debug = false
